ranger en mode alphabetique ou unalphabetique

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <label for="sortDropdown">Trier par difficulté :</label>
         <select id="sortDropdown" onchange="sortTable()">
             <option value="choose" disabled selected>Chosir</option>
+            <option value="alphabetic">Alphabétique (A à Z)</option>
+            <option value="reverseAlphabetic">Alphabétique (Z à A)</option>
             <option value="asc">Croissante</option>
             <option value="desc">Décroissante</option>
         </select>
