--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button id="refreshButton" onclick="loadTableData()">Refresh 🔄</button>
     </div>
     <div class="dowz">
-        <p>&copy; 2024 SafeConnect. Tous droits réservés.</p>
+        <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
     <script src="recupData.js"></script>
 </body>
