--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logo.png" type="image/png">
-    <title>SafeConnect</title>
+    <title>CyberSafe</title>
 </head>
 <body>
     <div class="up">
-        <h1>SafeConnect : Une Plateforme de Surveillance des Vulnérabilités</h1>
+        <h1>CyberSafe : Une Plateforme de Surveillance des Vulnérabilités</h1>
+        <img src="logo.png" alt="Logo">
+
     </div>
     <div class="center">
         <label for="sortDropdown">Trier par difficulté :</label>
@@ -25,7 +27,7 @@
         </table>
         <button id="refreshButton" onclick="loadTableData()">Refresh 🔄</button>
     </div>
-    <div class="dowz">
+    <div class="down">
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
     <script src="recupData.js"></script>
