--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="center">
         <label for="sortDropdown">Trier par difficulté :</label>
         <select id="sortDropdown" onchange="sortTable()">
-            <option value="choose" disabled selected>Chosir</option>
+            <option value="choose" disabled selected>Choisir</option>
             <option value="alphabetic">Alphabétique (A à Z)</option>
             <option value="reverseAlphabetic">Alphabétique (Z à A)</option>
             <option value="asc">Croissante</option>
