--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
         </div>
     </div>
     <div class="center">
+        
     </div>
     <div class="down">
+        <div class="language">
+            <label for="selectLanguage">Langue :</label>
+            <select id="selectLanguage" onchange="selectLanguage()">
+                <option value="choose" disabled selected>Choisir</option>
+                <option value="English">English</option>
+                <option value="Espagnol">Espanol</option>
+            </select>
+        </div>
         <a href="https://github.com/FLKprod/Projet-IOT" target="_blank">
             <i class="fa fa-github" style="font-size:2em;color:white"></i>
         </a>
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
+    <script src="language.js"></script>
 </body>
 </html>
