--- a/index.html
+++ b/index.html
@@ -15,11 +15,32 @@
         <div class="menu">
             <p onclick="location.href='tab.html'">Tableau des vulnerabilites</p>
             <p>Comment s'en proteger ?</p>
+            <p onclick="toggleTeamInfo()">Notre Equipe</p>
             <p>Divers</p>
         </div>
     </div>
     <div class="center">
-        
+        <div id="teamInfo" class="team-info-container">
+            <div class="team-info">
+                <img src="Photos/_MG_9841.JPG" alt="portrait">
+                <p>Nom: CyberSafe Team</p>
+                <p>Rôles: Développeurs, Experts en sécurité</p>
+                <p>Contact: equipe@cybersafe.com</p>
+                <a href="https://www.linkedin.com/feed/" target="_blank">
+                    <i class="fa fa-linkedin" style="font-size:2em;color:white"></i>
+                </a>
+            </div>
+            <hr>
+            <div class="team-info">
+                <img src="Photos/_MG_9841.JPG" alt="portrait">
+                <p>Nom: CyberSafe Team</p>
+                <p>Rôles: Développeurs, Experts en sécurité</p>
+                <p>Contact: equipe@cybersafe.com</p>
+                <a href="https://www.linkedin.com/feed/" target="_blank">
+                    <i class="fa fa-linkedin" style="font-size:2em;color:white"></i>
+                </a>
+            </div>
+        </div>
     </div>
     <div class="down">
         <div class="language">
@@ -35,6 +56,6 @@
         </a>
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
-    <script src="language.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
