Ajout de la fonctionnalité de recherche par mots-clés --- Jeremie

--- a/tab.html
+++ b/tab.html
@@ -15,6 +15,10 @@
 
     </div>
     <div class="center">
+        <div>
+            <input type="text" id="keywordInput" placeholder="Search here" style="padding: 10px; border: 2px solid #ccc; border-radius: 5px; width: 300px;">
+            <button onclick="keywordSearch()">Search</button>
+        </div>
         <label for="sortDropdown">Trier par difficulté :</label>
         <select id="sortDropdown" onchange="sortTable()">
             <option value="choose" disabled selected>Choisir</option>
