fusion des 2 html et des css +  page presentation + team

--- a/index.html
+++ b/index.html
@@ -13,33 +13,22 @@
         <h1>CyberSafe : Une Plateforme de Surveillance des Vulnérabilités</h1>
         <img src="logo.png" alt="Logo">
         <div class="menu">
-            <p onclick="location.href='tab.html'">Tableau des vulnerabilites</p>
-            <p>Comment s'en proteger ?</p>
-            <p onclick="toggleTeamInfo()">Notre Equipe</p>
+            <p onclick="toggleTeamInfo('presentation')">Presentation</p>
+            <p onclick="toggleTeamInfo('tableau')">Tableau des vulnerabilites</p>
+            <p onclick="toggleTeamInfo('teamInfo')">Notre Equipe</p>
             <p>Divers</p>
         </div>
     </div>
     <div class="center">
+        <div id="presentation" class="presentation-container">
+            <!-- Affichage de la page principale presentant le projet -->
+        </div>
+        <div id="tableau" class="tableau-container">
+            <!-- Affichage de notre tableau -->
+            <script src="recupData.js"></script>
+        </div>
         <div id="teamInfo" class="team-info-container">
-            <div class="team-info">
-                <img src="Photos/_MG_9841.JPG" alt="portrait">
-                <p>Nom: CyberSafe Team</p>
-                <p>Rôles: Développeurs, Experts en sécurité</p>
-                <p>Contact: equipe@cybersafe.com</p>
-                <a href="https://www.linkedin.com/feed/" target="_blank">
-                    <i class="fa fa-linkedin" style="font-size:2em;color:white"></i>
-                </a>
-            </div>
-            <hr>
-            <div class="team-info">
-                <img src="Photos/_MG_9841.JPG" alt="portrait">
-                <p>Nom: CyberSafe Team</p>
-                <p>Rôles: Développeurs, Experts en sécurité</p>
-                <p>Contact: equipe@cybersafe.com</p>
-                <a href="https://www.linkedin.com/feed/" target="_blank">
-                    <i class="fa fa-linkedin" style="font-size:2em;color:white"></i>
-                </a>
-            </div>
+            <!-- Affichage de notre equipe -->
         </div>
     </div>
     <div class="down">
@@ -57,5 +46,6 @@
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
     <script src="index.js"></script>
+    
 </body>
 </html>
