sup des fichier inutiles et tri des photoso

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="up">
         <h1>CyberSafe : Une Plateforme de Surveillance des Vulnérabilités</h1>
-        <img src="logo.png" alt="Logo">
+        <img src="Photos/logo.png" alt="Logo">
         <div class="menu">
             <p onclick="toggleTeamInfo('presentation')">Presentation</p>
             <p onclick="toggleTeamInfo('tableau')">Tableau des vulnerabilites</p>
