Traduction par DeepL
Traduction en n'importe quelle langue par DeepL
Fonctionne

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <select id="selectLanguage" onchange="selectLanguage()">
                 <option value="choose" disabled selected>Choisir</option>
                 <option value="English">English</option>
+                <option value="French">French</option>
                 <option value="Espagnol">Espanol</option>
             </select>
         </div>
