--- a/tab.html
+++ b/tab.html
@@ -40,6 +40,7 @@
             <label for="selectLanguage">Langue :</label>
             <select id="selectLanguage" onchange="selectLanguage()">
                 <option value="choose" disabled selected>Choisir</option>
+                <option value="French">French</option>
                 <option value="English">English</option>
                 <option value="Espagnol">Espanol</option>
             </select>
