--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="Photos/logo.png" type="image/png">
     <title>CyberSafe</title>
 </head>
 <body>
@@ -47,6 +47,5 @@
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
     </div>
     <script src="js/index.js"></script>
-    
 </body>
 </html>
