Nettoyage et ajout de langues
J'avais commit des trucs temporaires, je les ai supprimé, et ajout d'un catalogue de langues un peu plus grand

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                 <option value="choose" disabled selected>Choisir</option>
                 <option value="English">English</option>
                 <option value="French">French</option>
-                <option value="Espagnol">Espanol</option>
+                <option value="Spanish">Spanish</option>
+                <option value="German">German</option>
+                <option value="Bulgarian">Bulgarian</option>
+                <option value="Russian">Russian</option>
+                <option value="Swedish">Swedish</option>
+                <option value="Korean">Korean</option>
+                <option value="Chinese">Chinese</option>
+                <option value="Ukrainian">Ukrainian</option>
             </select>
         </div>
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
