optimisation de la langue dans le tableau
faire la traduction entiere de la page ?

--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
         <div class="language">
             <label for="selectLanguage">Langue :</label>
             <select id="selectLanguage" onchange="selectLanguage()">
-                <option value="choose" disabled selected>Choisir</option>
-                <option value="English">English</option>
-                <option value="French">French</option>
-                <option value="Spanish">Spanish</option>
-                <option value="German">German</option>
-                <option value="Bulgarian">Bulgarian</option>
-                <option value="Russian">Russian</option>
-                <option value="Swedish">Swedish</option>
-                <option value="Korean">Korean</option>
-                <option value="Chinese">Chinese</option>
-                <option value="Ukrainian">Ukrainian</option>
+                <option value="FR" selected>French</option>
+                <option value="EN">English</option>
+                <option value="SP">Spanish</option>
+                <option value="DE">German</option>
+                <option value="CS">Czech</option>
+                <option value="DA">Danish</option>
+                <option value="NL">Dutch</option>
+                <option value="ET">Estonian</option>
+                <option value="BG">Bulgarian</option>
+                <option value="RU">Russian</option>
+                <option value="SV">Swedish</option>
+                <option value="KO">Korean</option>
+                <option value="ZH">Chinese</option>
+                <option value="UK">Ukrainian</option>
             </select>
         </div>
         <p><strong>&copy; 2024 SafeConnect. Tous droits réservés.</p>
