Changement complet du css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div class="up">
-        <h1>CyberSafe : Une Plateforme de Surveillance des Vulnérabilités</h1>
-        <img src="Photos/logo.png" alt="Logo">
         <div class="menu">
+            <img src="Photos/logo.png" alt="Logo">
             <p onclick="toggleTeamInfo('presentation')">Presentation</p>
             <p onclick="toggleTeamInfo('tableau')">Tableau des vulnerabilites</p>
             <p onclick="toggleTeamInfo('teamInfo')">Notre Equipe</p>
             <p onclick="toggleTeamInfo('contact')">Nous contacter</p>
+        </div>
+        <div class="logo">
+            <img src="Photos/head.png" alt="Logo">
         </div>
     </div>
     <div class="center">
