changement de la page contact et du menu au niveau du css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="up">
         <div class="menu">
             <img src="Photos/logo.png" alt="Logo">
-            <p onclick="toggleTeamInfo('presentation')">Presentation</p>
-            <p onclick="toggleTeamInfo('tableau')">Tableau des vulnerabilites</p>
-            <p onclick="toggleTeamInfo('teamInfo')">Notre Equipe</p>
-            <p onclick="toggleTeamInfo('contact')">Nous contacter</p>
+            <button onclick="toggleTeamInfo('presentation')"><span class="text">Presentation</span><span>Presentation</span></button>
+            <button onclick="toggleTeamInfo('tableau')"><span class="text">Tableau des vulnerabilites</span><span>Tableau des vulnerabilites</span></button>
+            <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Equipe</span><span>Notre Equipe</span></button>
+            <button onclick="toggleTeamInfo('contact')"><span class="text">Nous contacter</span><span>Nous contacter</span></button>
         </div>
         <div class="logo">
             <img src="Photos/head.png" alt="Logo">
