resolution pb tableau et pb css table

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <!-- Affichage de la page principale presentant le projet -->
         </div>
         <div id="tableau" class="tableau-container">
+            <table id="vulnerabilityTable"></table>
             <!-- Affichage de notre tableau -->
             <script src="js/recupData.js"></script>
         </div>
