suppresion css inutile et MAJ css et paragraphes tab

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="up">
         <div class="menu">
             <img src="Photos/logo.png" alt="Logo">
-            <button onclick="toggleTeamInfo('presentation')"><span class="text">Presentation</span><span>Presentation</span></button>
-            <button onclick="toggleTeamInfo('tableau')"><span class="text">Tableau des vulnerabilites</span><span>Tableau des vulnerabilites</span></button>
-            <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Equipe</span><span>Notre Equipe</span></button>
+            <button onclick="toggleTeamInfo('presentation')"><span class="text">Présentation</span><span>Presentation</span></button>
+            <button onclick="toggleTeamInfo('tableau')"><span class="text">Liste des Vulnérabilites récement détéctées</span><span>Liste des Vulnérabilites récement détéctées</span></button>
+            <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Équipe</span><span>Notre Équipe</span></button>
             <button onclick="toggleTeamInfo('contact')"><span class="text">Nous contacter</span><span>Nous contacter</span></button>
         </div>
         <div class="logo">
