Update sans refresh tu tableau
Quand on choisi la langue, le tableau se met à jour sans avoir à refresh

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <div class="language">
             <label for="selectLanguage">Langue :</label>
             <select id="selectLanguage" onchange="selectLanguage()">
+                <option value="RIEN" selected></option>
                 <option value="FR">French</option>
-                <option value="EN" selected>English</option>
+                <option value="EN">English</option>
                 <option value="ES">Spanish</option>
                 <option value="DE">German</option>
                 <option value="CS">Czech</option>
