--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button onclick="toggleTeamInfo('presentation')"><span class="text">Présentation</span><span>Presentation</span></button>
             <button onclick="toggleTeamInfo('tableau')"><span class="text">Liste des Vulnérabilites récement détéctées</span><span>Liste des Vulnérabilites récement détéctées</span></button>
             <button onclick="toggleTeamInfo('definitions')"><span class="text">Définitions & Solutions</span><span>Définitions & Solutions</span></button>
+            <button onclick="toggleTeamInfo('comparaison')"><span class="text">Comparaison</span><span>Comparaison</span></button>
             <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Équipe</span><span>Notre Équipe</span></button>
             <button onclick="toggleTeamInfo('contact')"><span class="text">Nous contacter</span><span>Nous contacter</span></button>
         </div>
@@ -35,11 +36,15 @@
             <table id="defTable"></table>
             <!-- Affichage de définitions importantes et des solutions -->
         </div> 
+        <div id="comparaison" class="comparaison-container">
+            <table id="compTable"></table>
+            <!-- Affichage des comparaisons de sécurité des marques -->
+        </div>
         <div id="teamInfo" class="team-info-container">
             <!-- Affichage de notre equipe -->
         </div>
         <div id="contact" class="contact-container">
-            <!-- Affichage de notre equipe -->
+            <!-- Affichage de nos contacts -->
         </div>
     </div>
     <div class="down">
