onglet discussion ajouté (vide)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button onclick="toggleTeamInfo('tableau')"><span class="text">Liste des Vulnérabilites récement détéctées</span><span>Liste des Vulnérabilites récement détéctées</span></button>
             <button onclick="toggleTeamInfo('definitions')"><span class="text">Définitions & Solutions</span><span>Définitions & Solutions</span></button>
             <button onclick="toggleTeamInfo('comparaison')"><span class="text">Comparaison</span><span>Comparaison</span></button>
+            <button onclick="toggleTeamInfo('discussion')"><span class="text">Discsussion</span><span>Discussion</span></button>
             <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Équipe</span><span>Notre Équipe</span></button>
             <button onclick="toggleTeamInfo('contact')"><span class="text">Nous contacter</span><span>Nous contacter</span></button>
         </div>
@@ -39,6 +40,9 @@
         <div id="comparaison" class="comparaison-container">
             <table id="compTable"></table>
             <!-- Affichage des comparaisons de sécurité des marques -->
+        </div>
+        <div id="discussion" class="discussion-container">
+            <!-- Affichage de'un channel de discussion de cve -->
         </div>
         <div id="teamInfo" class="team-info-container">
             <!-- Affichage de notre equipe -->
