--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button onclick="toggleTeamInfo('tableau')"><span class="text">Liste des Vulnérabilites récement détéctées</span><span>Liste des Vulnérabilites récement détéctées</span></button>
             <button onclick="toggleTeamInfo('definitions')"><span class="text">Définitions & Solutions</span><span>Définitions & Solutions</span></button>
             <button onclick="toggleTeamInfo('comparaison')"><span class="text">Comparaison</span><span>Comparaison</span></button>
-            <button onclick="toggleTeamInfo('discussion')"><span class="text">Discsussion</span><span>Discussion</span></button>
+            <button onclick="toggleTeamInfo('discussion')"><span class="text">Discussion</span><span>Discussion</span></button>
             <button onclick="toggleTeamInfo('teamInfo')"><span class="text">Notre Équipe</span><span>Notre Équipe</span></button>
             <button onclick="toggleTeamInfo('contact')"><span class="text">Nous contacter</span><span>Nous contacter</span></button>
         </div>
